[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jax-preprocessing"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Wesley Holt", email = "wesleyjholt@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "equinox"
]

[project.urls]
Documentation = "https://github.com/Wesley Holt/jax-preprocessing#readme"
Issues = "https://github.com/Wesley Holt/jax-preprocessing/issues"
Source = "https://github.com/Wesley Holt/jax-preprocessing"

[tool.hatch.version]
path = "src/jax_preprocessing/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
test = [
  "pytest"
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/jax_preprocessing tests}"

[tool.coverage.run]
source_pkgs = ["jax_preprocessing", "tests"]
branch = true
parallel = true
omit = [
  "src/jax_preprocessing/__about__.py",
]

[tool.coverage.paths]
jax_preprocessing = ["src/jax_preprocessing", "*/jax-preprocessing/src/jax_preprocessing"]
tests = ["tests", "*/jax-preprocessing/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
